--- a/sample_worker.yaml
+++ b/sample_worker.yaml
@@ -18,7 +18,7 @@ logging:
     formatters:
         simpleFormater:
             format: '%(asctime)s - %(levelname)7s: %(name)10s: %(message)s'
-            datefmt: '%Y-%m-%d %H:%M:%S'
+            #datefmt: '%Y-%m-%d %H:%M:%S'
     handlers:
         console:
             class: logging.StreamHandler
